# resolver

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  IResolvable.h  MathElement.cpp  MathElement.h  MathObject.h  Resolver.h  main.cpp
